force-app/main/default/objects/Subscription_Map__c/Subscription_Map__c.object-meta.xml
<CustomObject>
    <description>A mapping table designed to store a subscription GUID, subscription type (e.g., SV Product Registration, MA Study, etc.), request flag, and account lookup. A record will be created each time an email (e.g., news letter, thank you, welcome, etc.) gets generated by Salesforce.com. The GUID is a unique ID assigned for each subscription type - and is the subject of &quot;unsubscribe&quot; request from the end user. When unsubscribe request is received, it will set the opt-out flag for that specific subscription type.</description>
    <label>Subscription Map</label>
    <nameField>
        <displayFormat>{YYYYMMDD}-{000000}</displayFormat>
        <label>Subscription Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>