force-app/main/default/objects/Subscription_Map__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to which this subscription is mapped against.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Maps</relationshipLabel>
    <relationshipName>Subscription_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>