force-app/main/default/objects/Subscription_Map__c/fields/Date_Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Date_Unsubscribed__c</fullName>
    <description>The static date and time when the user requested to be unsubscribed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Unsubscribed</label>
    <type>DateTime</type>
</CustomField>