force-app/main/default/objects/Subscription_Map__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <description>A custom generated GUID assigned to each subscription record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GUID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>