force-app/main/default/objects/Subscription_Map__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of subscription, e.g., SV Product Registration, MA Study, etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>