force-app/main/default/objects/Subscription_Map__c/fields/Unsubscribe_URL__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_URL__c</fullName>
    <description>The URL to unsubscribe service.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unsubscribe URL</label>
    <type>Url</type>
</CustomField>