force-app/main/default/objects/Subscription_Map__c/fields/Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether this account has already unsubscribed for this specific subscription.</description>
    <label>Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>