force-app/main/default/objects/Subscription_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Unsubscribed__c</columns>
    <columns>GUID__c</columns>
    <columns>Type__c</columns>
    <columns>Unsubscribed__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>